style: add css for dark mode

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
     --heavy-tint: rgba(0, 0, 0, 0.2);
     --text-color-loading: hsl(0, 0%, 40%);
     --text-color-disabled: gray;
+    --toolbar-outline-color: black;
     --menu-color: hsl(0, 0%, 80%);
     --menu-color-heavy: hsl(0, 0%, 65%);
     --menu-color-heavy2: hsl(0, 0%, 55%);
@@ -23,6 +24,28 @@ body {
     --small-shadow: 0 1px 2px rgba(0,0,0,0.3), 0 1px 3px 1px rgba(0,0,0,0.15);
     --bin-outline-color: rgba(0, 0, 0, 0.3);
     --grid-color: rgba(0, 0, 0, 0.1);
+    --bin-shadow-dims: 0 0 4px 1px;
+}
+body.dark {
+    background-color: hsl(0, 0%, 12%);
+    color: var(--text-color);
+    fill: var(--text-color);
+    --tint: rgba(255, 255, 255, 0.1);
+    --heavy-tint: rgba(255, 255, 255, 0.2);
+    --text-color: hsl(0, 0%, 80%);
+    --text-color-loading: hsl(0, 0%, 50%);
+    --text-color-disabled: hsl(0, 0%, 40%);
+    --toolbar-outline-color: hsl(0, 0%, 45%);
+    --menu-color: hsl(0, 0%, 20%);
+    --menu-color-heavy: hsl(0, 0%, 30%);
+    --menu-color-heavy2: hsl(0, 0%, 40%);
+    --menu-color-heavy3: hsl(0, 0%, 50%);
+    --bar-color: hsla(0, 0%, 20%, 0.8);
+    --large-shadow: 0 4px 8px rgba(255,255,255,0.4), 0 4px 12px 4px rgba(255,255,255,0.2);
+    --small-shadow: 0 1px 2px rgba(255,255,255,0.3), 0 1px 3px 1px rgba(255,255,255,0.15);
+    --bin-outline-color: hsla(0, 0%, 100%, 0.3);
+    --grid-color: hsla(0, 0%, 100%, 0.1);
+    --bin-shadow-dims: 0 0 4px 2px;
 }
 #arena {
     position: relative;
@@ -85,11 +108,17 @@ footer {
     align-items: center;
     justify-content: space-around;
 }
+.dark .item {
+    filter: brightness(0.9);
+}
 .item-touch .item {
     touch-action: none;
 }
-.item.moving {
+.light .item.moving {
     box-shadow: var(--large-shadow);
+}
+.dark .item.moving {
+    filter: none;
 }
 .show-id .item::after {
     content: attr(data-item-id);
@@ -126,35 +155,60 @@ footer {
 .bar-label, .bar-value {
     padding: 3px 5px 3px 5px;
 }
-.bar-value.error {
+.light .bar-value.error {
     color: #721c24;
     background-color: #f5c6cb;
 }
-.bar-value.warning {
+.light .bar-value.warning {
     color: #856404;
     background-color: #ffeeba;
 }
-.bar-value.success {
+.light .bar-value.success {
     color: #155724;
     background-color: #c3e6cb;
+}
+.dark .bar-value.error {
+    background-color: #721c24;
+    color: #f5c6cb;
+}
+.dark .bar-value.warning {
+    background-color: #856404;
+    color: #ffeeba;
+}
+.dark .bar-value.success {
+    background-color: #155724;
+    color: #c3e6cb;
 }
 
 /* beautification */
 
-#arena, .item {
+.dark input[type="text"], .dark textarea {
+    background-color: hsl(0, 0%, 10%);
+    color: var(--text-color);
+}
+.dark input[type="text"]::placeholder {
+    color: var(--text-color-disabled);
+}
+.light #arena, .light .item {
     box-shadow: var(--small-shadow);
+}
+.dark #arena {
+    outline: 2px solid var(--bin-outline-color);
 }
 #inventory, .bin {
     outline: 1px solid var(--bin-outline-color);
 }
+.bin[data-bin-type] {
+    outline: none;
+}
 .bin[data-bin-type="good"] {
-    box-shadow: 0 0 3px 1px rgb(0, 165, 40);
+    box-shadow: var(--bin-shadow-dims) rgb(0, 165, 40);
 }
 .bin[data-bin-type="warning"] {
-    box-shadow: 0 0 3px 1px rgb(191, 124, 0);
+    box-shadow: var(--bin-shadow-dims) rgb(191, 124, 0);
 }
 .bin[data-bin-type="danger"] {
-    box-shadow: 0 0 3px 1px rgb(191, 0, 0);
+    box-shadow: var(--bin-shadow-dims) rgb(191, 0, 0);
 }
 .bar {
     background-color: var(--bar-color);
@@ -168,11 +222,17 @@ footer {
     opacity: 90%;
     box-shadow: none;
 }
-#hover-rect.success {
+.light #hover-rect.success {
     background-color: rgba(40, 167, 69, 0.5);
 }
-#hover-rect.failure {
+.light #hover-rect.failure {
     background-color: rgba(220, 53, 69, 0.5);
+}
+.dark #hover-rect.success {
+    background-color: hsla(134, 61%, 25%, 0.5);
+}
+.dark #hover-rect.failure {
+    background-color: hsla(354, 70%, 35%, 0.5);
 }
 #inventory, .bin {
     background-image: linear-gradient(to right, var(--grid-color) 1px, transparent 1px),
@@ -214,8 +274,8 @@ footer {
     min-height: 3rem;
     user-select: none;
     background-color: var(--menu-color);
-    border-left: 1px solid black;
-    border-bottom: 1px solid black;
+    border-left: 1px solid var(--toolbar-outline-color);
+    border-bottom: 1px solid var(--toolbar-outline-color);
     flex-direction: column;
 }
 .toolbar > li > svg {
@@ -244,7 +304,7 @@ footer {
     background-color: var(--menu-color-heavy3);
 }
 .toolbar > li:last-child {
-    border-right: 1px solid black;
+    border-right: 1px solid var(--toolbar-outline-color);
 }
 
 .menu header {
@@ -360,17 +420,29 @@ button[type="submit"] {
     flex-grow: 1;
     padding: 0.6em 1em;
 }
-#msg-list > li.error {
+.light #msg-list > li.error {
     color: #721c24;
     background-color: #f8d7da;
 }
-#msg-list > li.warning {
+.light #msg-list > li.warning {
     color: #856404;
     background-color: #fff3cd;
 }
-#msg-list > li.success {
+.light #msg-list > li.success {
     color: #155724;
     background-color: #d4edda;
+}
+.dark #msg-list > li.error {
+    background-color: #721c24;
+    color: #f8d7da;
+}
+.dark #msg-list > li.warning {
+    background-color: #856404;
+    color: #fff3cd;
+}
+.dark #msg-list > li.success {
+    background-color: #155724;
+    color: #d4edda;
 }
 .close-btn, .back-btn {
     font-size: 1.5em;
