--- a/style.css
+++ b/style.css
@@ -47,6 +47,9 @@ body.dark {
     --grid-color: hsla(0, 0%, 100%, 0.1);
     --bin-shadow-dims: 0 0 4px 2px;
 }
+.light .dark-only, .dark .light-only {
+    display: none;
+}
 #arena {
     position: relative;
     display: flex;
